# lore

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/skills/: lore.md
demos/: architecture.md  example_queries.md  quickstart.sh
hooks/: capture_trajectory.py  get_suggestions.sh  post_absorb.sh  post_query.sh
scripts/: bootstrap_wiki.py  build_space_bundle.sh  deploy_space.sh  setup.sh
space/: README.md  app.py  requirements.txt
src/lore/: config.py  demo.py  linker.py  mcp_server.py  preview.py  titles.py
src/lore/cli/: evolve_cli.py  wiki_cli.py
src/lore/compile/: compiler.py  incremental.py  linker.py  taxonomy.py
src/lore/evolve/: buffer.py  curiosity.py  daemon.py  distill.py  reward.py  serve.py  trainer.py  trajectory.py
src/lore/health/: checker.py  suggestions.py
src/lore/index/: embedder.py  search.py  store.py
src/lore/ingest/: chunker.py  parsers.py  pipeline.py
src/lore/query/: agent.py  citation.py
src/lore/render/: charts.py  report.py  slides.py
src/lore/web/: app.py
tests/: test_demo.py  test_preview.py
wiki/: _index.md  _log.md  _summaries.md
wiki/_meta/: health_report.md
wiki/benchmarks/: on-device-llm.md
wiki/concepts/: 1-bit-llm.md  4-bit-awq.md  activation-aware-weight-quantization.md  awq.md  bitnet-b158.md  bitnet.md  fp16.md  huggingface.md  int2.md  int3.md  llama.md  llamacpp.md  lora.md  low-bit-weight-quantization.md  memory-bandwidth.md  memory-footprint.md  model-quantization.md  per-channel-scaling.md  post-training-quantization.md  quantization.md  rotary-embedding.md  swiglu.md  tinychat.md  vila.md  vllm.md  weight-quantization.md
wiki/models/: llama-alike-components.md  rmsnorm.md
wiki/techniques/: gptq.md  int4.md  llm-compression.md  quantization-aware-training.md  weight-loading.md
