[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-kb"
version = "0.1.0"
description = "Agent-maintained personal knowledge wiki with curiosity training"
requires-python = ">=3.10"
dependencies = [
    "peft>=0.10.0",
    "trl>=0.8.0",
    "pdfminer.six>=20221105",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlitedict>=2.1.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
]

[project.scripts]
lore = "lore.cli.wiki_cli:main"
lore-ingest = "lore.cli.wiki_cli:ingest_main"
lore-search = "lore.cli.wiki_cli:search_main"
lore-health = "lore.cli.wiki_cli:health_main"
lore-status = "lore.cli.wiki_cli:status_main"
lore-cleanup = "lore.cli.wiki_cli:cleanup_main"
lore-trace = "lore.cli.wiki_cli:trace_main"
lore-train = "lore.cli.evolve_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.hatch.build]
sources = ["src"]
